styles.css
*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-size: 16px;
  font-family: "Raleway", Verdana, Geneva, Tahoma, sans-serif;
  --bg-color: rgb(230, 230, 230);
  --header-color: rgb(255, 255, 255);
  --sidebar-color: rgb(0, 102, 255);
  --text-color: rgb(65, 65, 65);
  --box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

body {
  display: grid;
  grid-template-columns: 220px 1fr;
  grid-template-rows: 120px auto;
}
html,
body {
  min-height: 100vh;
  height: auto;
}
/* * {
  border: 1px solid red;
} */

/* Sidebar */
.sidebar {
  background: var(--sidebar-color);
  grid-column: 1;
  grid-row: 1 / 3;
  color: white;
  font-weight: bold;
  gap: 75px;
  padding: 20px 12px;
  display: flex;
  flex-direction: column;
}

.sidebar a {
  display: flex;
  align-items: center;
  text-decoration: none;
  color: #fff;
  gap: 8px;
}

.dashboard {
  display: flex;
  align-items: center;
  gap: 8px;
}
.pages,
.settings {
  display: grid;
  gap: 10px;
}
.settings {
  margin-top: auto;
}
.dashboard > p {
  font-size: 1.6rem;
}
.dashboard > i {
  font-size: 2.5rem;
}

/* Header */
.header {
  background: var(--header-color);
  grid-column: 2;
  display: grid;
  grid-template-rows: 1fr 1fr;
  padding: 1rem;
  row-gap: 1rem;
  box-shadow: var(--box-shadow);
  position: relative;
}

.upper-header,
.lower-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
/* Upper-header*/
/* Searchbar */
.searchbar {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 12px;
}
input[type="search"] {
  background: #dfdfdf;
  border: none;
  border-radius: 8px;
}
.searchbar > button {
  border: none;
  background: transparent;
  scale: 0.8;
  cursor: pointer;
}

.user-page {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 16px;
}

/* Lower-header */
.user {
  display: flex;
  gap: 8px;
  align-items: center;
}
.user i {
  font-size: 2.5rem;
}
.user p {
  font-size: 0.8rem;
  color: var(--text-color);
}
.user h2 {
  font-size: 1.2rem;
}

.actions {
  display: flex;
  align-items: center;
  gap: 16px;
}
.actions > button {
  border: none;
  background-color: var(--sidebar-color);
  border-radius: 12px;
  font-size: 0.8rem;
  color: white;
  font-weight: bold;
  padding: 6px 24px;
  cursor: pointer;
}

/* Main */
.main {
  background: var(--bg-color);
  grid-column: 2;
  display: grid;
  grid-template-columns: auto 200px;
  grid-template-rows: auto 1fr;
  gap: 16px;
  padding: 16px;
}
/* Projects*/
.projects {
  grid-row: 1 / 3;
}
.cards {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
  gap: 16px;
  margin-top: 10px;
}

.card {
  height: 200px;
  border-radius: 8px;
  background: rgb(255, 255, 255);
  padding: 16px;
  display: grid;
  grid-template-rows: 1fr auto;
  box-shadow: var(--box-shadow);
  border-left: 8px solid orange;
}
.card-title {
  font-size: 1rem;
  font-weight: bold;
}
.card-text {
  font-size: 0.9rem;
  color: var(--text-color);
}
.card-icon {
  display: flex;
  justify-content: flex-end;
  gap: 8px;
}
a {
  color: black;
  text-decoration: none;
}
/* Announcements and Trending*/

.items,
.trends {
  margin-top: 10px;
  border-radius: 8px;
  background: rgb(255, 255, 255);
  padding: 16px;
  display: grid;
  grid-template-rows: repeat(auto-fill, minmax(1fr, 1fr));
  gap: 10px;
  box-shadow: var(--box-shadow);
}
.items a {
  text-decoration: none;
}
.item p:first-of-type {
  font-weight: bold;
  font-size: 0.9rem;
  color: black;
}
.item p:nth-of-type(2) {
  font-size: 0.8rem;
  text-align: justify;
  color: var(--text-color);
}
.item:not(:last-of-type) {
  border-bottom: 1px solid #dbdbdb;
  padding-bottom: 10px;
}

.trends > div a {
  display: flex;
  gap: 8px;
  align-items: center;
}
.trend-text {
  display: flex;
  flex-direction: column;
}
.trend-text p:nth-of-type(1) {
  font-size: 0.7rem;
}
.trend-text p:nth-of-type(2) {
  font-size: 0.7rem;
}
.trends div > i {
  font-size: 2rem;
}

